--- a/jinpost/src/components/post/PostInfo.module.css
+++ b/jinpost/src/components/post/PostInfo.module.css
@@ -1,37 +1,79 @@
 .baseForm {
-    border: 1px solid black;
 }
 
 .postTitle {
     font-size: 40px;
     font-weight: bold;
     height: 60px;
-    border: 1px solid blue;
 }
 
 .info {
     display: flex;
     justify-content: space-between;
-    border: 1px solid red;
+    margin-bottom: 10px;
 }
 
 .leftInfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
 }
 
 .rightInfo {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 10px;
 }
 
 .imageInfo {
-    border: 1px solid green;
     height: 300px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.leftImage {
+    border: 1px solid black;
+    width: 6000px;
+    margin-right: 20px;
+}
+
+.rightImage {
+    border: 1px solid black;
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rightLeft {
+    border: 1px solid red;
+    margin: 10px;
+    height: 295px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.rightRight {
+    border: 1px solid blue;
+    margin: 10px;
+    height: 295px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .contentInfo {
-    border: 1px solid yellow;
+    margin-bottom: 10px;
     height: 400px;
 }
 .replyInfo {
-    border: 1px solid aqua;
     height: 1000px;
 }
